- Removed configuration settings: --vsync-minimum-length, --no-horiz-stabilization, --enablezx8081lnctradjust, --disablezx8081lnctradjust
- Removed menu settings: Horizontal Stabilization, lnctr video adjust, Video x_offset
- Improved vsync sound detection

Improved Debug CPU:
- Allow to show opcode timings (setting not enabled by default)
- Show when registers values are modified by last opcode execution
- Views 5 and 6 use a different memptr ("memptx")
- Show when memory is modified by last opcode execution on views 5 and 6
- Direct key (t) to evaluate expressions
- Added setting to stop on PC+2 when step over RST 8, useful when debugging esxdos calls
- Added user variables VAR0, VAR1, ... VAR9
- Added video frames counter
- Reassign option key 'x' ("switch view mode") to 'y' ("change layout")

Improved Snapshots in RAM:
- Browse visually all the stored snapshots in RAM, like on a "Time Machine"
- Allow to save snapshots in RAM; you could do it before automatically at fixed intervals, now you can save it whenever you want

Improved ZX Vision:
- Added new Top Menu (not enabled by default)
- Reordered settings & new menu: check settings -> Emulated Display, General, Main Window, ZX Vision, TV
- Added shortcuts helper action to create icon to trigger recorded keys
- Some settings dialogs can reset value to defaults
- Restored maximized windows on startup, will be restored to the maximum size available
- New widget type Triangle on View Sensors

Improved ZX Desktop:
- Allow to set small values for ZX Desktop width size
- Add setting to disallow enabling ZX Desktop
- Allow to change background color for icons, lower and upper buttons
- Added setting to add a stroke on icons

Improved editing joystick to events/keys (allow to unasign easily)
Improved ZX Life: allow to speed up game, fix behaviour on board limits
Improved Trash icon
Improved decimal precision of Basic Variables window values