@@ -8799,6 +8799,8 @@ void menu_debug_help(void)
         "\n"
         "u: Ejecutar hasta que se llegue a la posición indicada por el puntero\n"
         "\n"
+        "E: Ejecutar hasta que la cpu encuentra un opcode de retorno (cualquier RET, RETI, RETN o RET with condición verdadera)\n"
+        "\n"
         "e: Ejecutar la instrucción RET, que provocará alterar registros PC y SP\n"
         "\n"
         "p: Resetear contador de t-estados parcial. Dicho contador se encuentra visible en las vistas 2, 3 y 5\n"
@@ -8922,6 +8924,8 @@ void menu_debug_help(void)
         "n: Sortir de la vista de Debug CPU i continuar executant\n"
         "\n"
         "u: Executar fins que s'arribi a la posició indicada pel punter\n"
+        "\n"
+        "E: Executar fins que la cpu troba una instrucció de retorn (qualsevol RET, RETI, RETN o RET amb condició verdadera)\n"
         "\n"
         "e: Executar la instrucció RET, que provocarà alterar registres PC i SP\n"
         "\n"
@@ -9047,6 +9051,8 @@ void menu_debug_help(void)
         "n: Exit from Debug CPU window and continue running\n"
         "\n"
         "u: Run until the cpu reaches the current pointer position\n"
+        "\n"
+        "E: Run until the cpu finds a return opcode (any RET, RETI, RETN or RET with true condition)\n"
         "\n"
         "e: Run a RET opcode, which will alter PC and SP registers\n"
         "\n"
